Avance del día: sistema de compras, pagos, admin y mejoras UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
     <string name="descripción_salir" />
     <string name="editar" />
     <string name="borrar" />
+
+    <!-- ⭐ ARRAY PARA LAS CUOTAS (NECESARIO PARA COMPRAR DISPOSITIVO) ⭐ -->
+    <string-array name="cuotas_array">
+        <item>1 cuota (Pago completo)</item>
+        <item>3 cuotas</item>
+        <item>6 cuotas</item>
+        <item>12 cuotas</item>
+    </string-array>
+
 </resources>
